# ASCII-hunt

./: .cursorprompts.md  .cursorrules  .gitignore  gen_gitignore.py  markdown_newline_fixer_config.yaml  mypy.ini  pyproject.toml  requirements.txt  rich_directory_tree_ASCII-hunt.md
.misc/Future_Implementations/: System_Restructuring.md
.wash/: SCRIPT_DESIGN.md
.wash/.backups/: combined_final.mmd
.wash/.crold/: .cr-first-xml.md
.wash/.diagnostic-tree-tasklist/: 05-miner-driller-importers.md  FULL-DIRECTORY-TREE.md
.wash/.plans-lists/: .diagnosis-tree.md  dtl.md
.wash/_diagnostic-tree-tasklist/: 03-core-datastack-datastructure-dsl.md  05-miner-driller-importers.md  06-managers-mapping-patterns-performance.md  07-plugins-processors-quantum-recognition.md  08-templates-utils-visualization-widgets-root.md
.wash/n_line_fix/: config.yaml
Future_Implementations/: instructions.md
changlog/: System_Integration.md
docs/: 00-INDEX.md  01-python-stack  02-algorithms.md  03-architecture.md  04-front-end.md  05-back-end.md  06-dsl  06.2-dsl-docs.md  ASCII-HUNT-TREE.md  diag-directory.md
docs/00-System-Architecture-Mermaid/: 02-python-front-end.md  03-dsl-dependencies.md  03-dsl-system.md  04-algorithm-system.md  system-architecture-diagram.md
docs/build-docs/: 00-INDEX.md  01-python-stack.md  02-algorithms.md  04-front-end.md  05-back-end.md  06-1-dsl-intro.md  06-3-dsl-dictionary.md  System_Integration.md
docs/system-architecture-docs/: 01-hunt-SYSTEM-ARCHITECTURE.md  03-hunt-SPECIFICATION.md  04-hunt-ARCHITECTURE-ER-DIAGRAM.xml
import_miner/docs_import_miner/: future_implementations.md  import_management.md
import_miner/import_driller/: adaptive_import_manager.py  advanced_import_finder.py  bayesian_confidence.py  bayesian_importer.py  compiler_analyzer.py  correction_model.py  cross_langiage_resolver.py  cst_analyzer.py  dependency_injection.py  domain_aware_import.py  dynamic_import_tracer.py  importer.py  ml_suggester.py  neural_importer.py  symbol_dependency_graph.py  usage_tracker.py
import_miner/miner/: adv.py  fix_project_imports.py  import_miner.py
src/: .cursorprompts.md  .cursorrules.md  __init__.py  cli.py  main.py  setup.py  transformation_pipeline.py
src/_diagnostic-tree-tasklist/: 00-RULES-DIAGNOSTIC-TREE-TASKLIST.MD  01-adapters-and-algorithms.md  02-analysis-analyzers-components.md  03-core-datastack-datastructure-dsl.md  (+5 more)
tools/: ascii_count.py  ascii_width.py  frank.ascii.py  gen_gitignore.py  generate_tree.py
(+409 files in other folders)
