[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-hunt"
version = "0.1.0"
description = "ASCII UI Translation Engine"
authors = [
    {name = "ASCII Hunt Team"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "COM818", "COM819", "RUF"]
ignore = []
line-length = 88
target-version = "py310"

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto" 